style page added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>monika</title>
 </head>
 
@@ -12,6 +13,7 @@
     <script>
         document.getElementById("monika").style.color = "red";
     </script>
+    <input type="button" onclick="hello" name="ok" value="click me" />
 
 
 </body>
