--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
+
     <title>monika</title>
 </head>
 
 <body>
     <h1 id="monika">project</h1>
     <h2> first page</h2>
+    <h3 id="demo">home page</h3>
+
 
     <script>
         document.getElementById("monika").style.color = "red";
     </script>
     <input type="button" onclick="hello" name="ok" value="click me" />
+    <script src="index.js">
 
+    </script>
 
 </body>
 
